fix(skillSlider): increase animation duration for skills carousel to enhance visibility

--- a/staticfiles/css/skillSlider.css
+++ b/staticfiles/css/skillSlider.css
@@ -18,13 +18,13 @@
 
 .skills-carousel {
     display: flex;
-    animation: scroll 550s linear infinite;
+    animation: scroll 800s linear infinite;
     will-change: transform;
 }
 
 .skills-carousel-reverse {
     display: flex;
-    animation: scroll-reverse 550s linear infinite;
+    animation: scroll-reverse 800s linear infinite;
     will-change: transform;
 }
 
